[package]
name = "SvnCommitWT"
description = "SVN集成Worktile服务"
version = "0.1.1"
authors = ["gaoqiangz@msn.com"]
edition = "2018"

[dependencies]
windows-service = { git = "https://github.com/mullvad/windows-service-rs.git", rev = "a30e371" }
actix-web = { version = "2.0.0", features = ["openssl"] }
actix-rt = "1.1.1"
futures = "0.3.1"
tokio = { version = "0.2.21", features = ["process"] }
reqwest = { version = "0.10.4", features=["json","gzip","blocking"] }
serde = "1.0.110"
serde_json = "1.0.53"
regex = "1.3.7"
clap = "2.33.1"
log = "0.4.8"
log4rs = { version = "0.10.0", features = ["toml_format"] }
chrono = { version = "0.4.11", features = ["serde"] }
config = "0.10.1"
toml = "0.5.6"
sys-info = "0.6.1"
openssl = "0.10.28"
hex = "0.4.2"
encoding = "0.2.33"
rand = "0.7.3"